# advent_of_code

./: .gitignore  README.md
1/: solution.py
2/: solution.py
aoc_2024/: README.md  pyproject.toml
aoc_2024/1/: solution.py
aoc_2024/2/: solution.py
aoc_2024/3/: solution.py  solution_part2.py
aoc_2024/4/: solution.py  solution_part2.py
aoc_2024/assignment/: day_02.md
aoc_2024/src/: day_01.py  day_02.py  day_03_p1.py  day_03_p2.py  day_04_p1.py  day_04_p2.py  day_05.py  day_06.py  day_07.py  day_08_p1.py  day_08_p2.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py
aoc_2025/: README.md  test.py
aoc_2025/src/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py
