[tool.poetry]
name = "src"
version = "0.1.0"
description = "Advent of code 2024"
authors = ["Tran, Minh Hoang <tranmh2002@gmail.com>"]
license = ":D"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
numpy = "^2.1.3"
scipy = "^1.14.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
